<resources>
    <string name="app_name">Amelia</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="string_space"> </string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_operate_device">Operate Devices</string>
    <string name="menu_setting_device">Setting Devices</string>


    <string name="str_refresh">Refresh</string>
    <string name="str_last_up">Last update: </string>
    <string name="val_last_up">----/--/-- --:--</string>
    <string name="wifi_ssid">SSID</string>
    <string name="wifi_level">LEVEL</string>
    <string name="wifi_security">SECURITY</string>
    <string name="wifi_radio_suggestion_internet">Conexion a Red Wifi (Internet)</string>
    <string name="wifi_radio_specifier_p2p">Conexion a AP (P2P)</string>

    <string name="amelia_wifi_config">Amelia Wifi Config</string>
    <string name="prompt_wifi_name">Nombre Wifi</string>
    <string name="prompt_password">Clave</string>
    <string name="action_connect_wifi">Conectar</string>

    <string name="device_serial">Serial</string>
    <string name="device_ip">IP</string>
    <string name="device_menu_unlink">Desvincular</string>

    <string name="dialog_btn_ok">Ok</string>
    <string name="dialog_btn_cancel">Canceler</string>


</resources>