<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minHeight="?attr/listPreferredItemHeight"
    android:orientation="vertical"
    android:paddingBottom="4dp"
    android:paddingLeft="1dp"
    android:paddingRight="1dp"
    android:paddingTop="4dp"
    android:background="@drawable/round_operate_device_item"
    android:layout_marginTop="4dp"
    android:layout_marginLeft="2dp"
    android:layout_marginRight="2dp"
    android:id="@+id/itemOperateDeviceList"
    >

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignParentEnd="false"
        android:layout_marginStart="3dp"
        android:layout_centerVertical="true"
        android:src="@drawable/ic_amelia_box"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/circleInit"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_alignStart="@+id/iv_avatar"
        android:layout_marginStart="60dp"
        android:layout_marginTop="0dp"
        android:background="@drawable/circle_connector_init"
        />


    <TextView
        android:id="@+id/circleContinue1"
        android:layout_width="9dp"
        android:layout_height="9dp"
        android:layout_marginTop="13dp"
        android:layout_alignStart="@+id/iv_avatar"
        android:layout_marginStart="60dp"
        android:background="@drawable/circle_connector_continue"
        />

    <TextView
        android:id="@+id/circleContinue2"
        android:layout_width="9dp"
        android:layout_height="9dp"
        android:layout_marginTop="20dp"
        android:layout_alignStart="@+id/iv_avatar"
        android:layout_marginStart="60dp"
        android:background="@drawable/circle_connector_continue"
        />

    <TextView
        android:id="@+id/circleContinue3"
        android:layout_width="9dp"
        android:layout_height="9dp"
        android:layout_marginTop="27dp"
        android:layout_alignStart="@+id/iv_avatar"
        android:layout_marginStart="60dp"
        android:background="@drawable/circle_connector_continue"
        />

    <TextView
        android:id="@+id/circleContinue4"
        android:layout_width="9dp"
        android:layout_height="9dp"
        android:layout_marginTop="35dp"
        android:layout_alignStart="@+id/iv_avatar"
        android:layout_marginStart="60dp"
        android:background="@drawable/circle_connector_continue"
        />

    <TextView
        android:id="@+id/circleContinue5"
        android:layout_width="9dp"
        android:layout_height="9dp"
        android:layout_marginTop="43dp"
        android:layout_alignStart="@+id/iv_avatar"
        android:layout_marginStart="60dp"
        android:background="@drawable/circle_connector_continue"
        />

    <TextView
        android:id="@+id/circleEnd"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginTop="50dp"
        android:layout_alignStart="@+id/iv_avatar"
        android:layout_marginStart="60dp"
        android:background="@drawable/circle_connector_init"
        />

    <!-- Serial -->
    <TextView
        android:id="@+id/device_serial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/iv_avatar"
        android:layout_marginStart="80dp"
        android:text="@string/device_serial"
        android:textAppearance="?attr/textAppearanceListItem"

        tools:ignore="RelativeOverlap" />
    <!-- Ip -->
    <TextView
        android:id="@+id/device_ip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/device_serial"
        android:layout_below="@+id/device_serial"
        android:text="@string/device_ip"

        />

    <!-- time -->
    <TextView
        android:id="@+id/txt_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/device_ip"
        android:layout_alignStart="@+id/device_ip"
        android:layout_alignParentEnd="false"
        android:layout_gravity="start|center_vertical"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="50dp"
        android:text="@string/string_space"

        />

    <!-- Options -->
    <TextView
        android:id="@+id/btnViewOption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:textSize="33sp"
        android:text="&#8942;"
        android:textAppearance="?android:textAppearanceLarge" />

    </RelativeLayout>