<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.wifi.WifiFragment">

    <androidx.appcompat.widget.SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:id="@+id/search"
        app:iconifiedByDefault="false"
        app:searchHintIcon="@null"
        app:queryHint="Search..."
        android:focusable="false"
        android:textStyle="bold"
        app:closeIcon="@drawable/ic_baseline_clear_24"
        app:searchIcon="@drawable/ic_baseline_search_24"
        android:background="@drawable/search_bkg"/>

        <TextView
            android:id="@+id/status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_last_up"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_below="@id/search"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="165dp"
            android:layout_marginTop="7dp"
            />

        <TextView
            android:id="@+id/status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/val_last_up"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/status_label"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_below="@id/search"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="18dp"
            android:layout_marginTop="7dp"/>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/list_wifi"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="3dp"
        android:layout_marginVertical="3dp"
        android:layout_below="@id/status_label">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewList"
            android:name="cl.brown.amelia.ui.wifi.WifiFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            app:layoutManager="LinearLayoutManager"
            tools:context=".ui.wifi.WifiFragment"
            tools:listitem="@layout/fragment_wifi"
            android:layout_below="@id/list_wifi"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/refreshList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@drawable/ic_wifi_refresh"
            android:contentDescription="@string/str_refresh" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>